syntax = "proto3";

option csharp_namespace = "Service.Candles.Contracts";

package com.swisschain.grpc.messages.candles;

import "google/protobuf/empty.proto";

service Monitoring {
	rpc IsAlive (google.protobuf.Empty) returns (IsAliveResponse);
}

message IsAliveResponse {
	string name = 1;
	string version = 2;
	string startedAt = 3;
}
